更改初始化数据写入